# reASITIC-old

./: .gitignore  CHANGELOG.md  CLI_REFERENCE.md  COOKBOOK.md  FAQ.md  MAPPING.md  PLAN.md  README.md  TUTORIAL.md  pyproject.toml  run_website.sh
.github/workflows/: ci.yml  docs.yml
benchmarks/: baseline.txt  bench_inductance.py
docs/: .gitignore  Makefile  asitic_geometry_c.md  benchmarks.md  cli.md  conf.py  cookbook.md  gui.md  index.md  install.md  mapping.md  milestone.md  repl.md  tutorial.md
docs/api/: cli.rst  exports.rst  geometry.rst  gui.rst  index.rst  inductance.rst  info.rst  network.rst  optimise.rst  persistence.rst  plot.rst  quality.rst  report.rst  resistance.rst  substrate.rst  tech.rst  units.rst  validation.rst
docs/repl/: app.js  bridge.py  build_examples.py  draw.js  examples.json  index.html  style.css  worker.js
examples/: 01_single_spiral.py  02_freq_sweep_s2p.py  03_optimise.py  04_transformer.py  05_design_report.py  06_jupyter_demo.ipynb  L1_sweep.s2p  README.md
scripts/: generate_cli_reference.py  pre_commit.sh
src/reasitic/: __init__.py  __main__.py  cli.py  geometry.py  info.py  persistence.py  plot.py  quality.py  report.py  spiral_helpers.py  tech.py  units.py
src/reasitic/exports/: __init__.py  cif.py  fasthenry.py  gds.py  sonnet.py  spice.py  tek.py
src/reasitic/gui/: __init__.py  __main__.py  app.py  colors.py  renderer.py  viewport.py
src/reasitic/inductance/: __init__.py  eddy.py  filament.py  grover.py  matrix_fill.py  partial.py  skew.py
src/reasitic/network/: __init__.py  analysis.py  mna_helpers.py  sweep.py  threeport.py  touchstone.py  twoport.py
src/reasitic/optimise/: __init__.py  batch.py  opt_poly.py  opt_sq.py  sweep.py
src/reasitic/resistance/: __init__.py  dc.py  skin.py  three_class.py
src/reasitic/substrate/: __init__.py  coupled.py  fft_grid.py  green.py  segment_cap.py  shunt.py
src/reasitic/validation/: __init__.py  binary_runner.py
tests/: _paths.py  test_2port_y_helpers.py  test_against_golden_artifacts.py  test_analysis.py  test_binary_runner_unit.py  test_branch_coverage_polish.py  test_cif_branches.py  test_cli_commands.py  test_coupled_microstrip.py  test_coupling.py  test_coverage_boost.py  test_exports.py  test_extras.py  test_fft_green.py  test_fft_grid_branches.py  test_filament.py  test_filament_branches.py  test_filament_edges.py  test_full_design_flow.py  test_full_workflow.py  test_gds_branches.py  test_gds_export.py  test_geometry.py  test_green_helpers.py  test_inductance.py  test_info.py  test_integration.py  test_kernel_ports.py  test_kernel_ports_2.py  test_kernel_ports_3.py  test_layout_polygons_against_cif.py  test_matrix_fill.py  test_misc_features.py  test_misc_polish.py  test_mna_solvers.py  test_more_builders.py  test_more_cli.py  test_more_coverage.py  test_more_exports.py  test_more_extras.py  (+29 more)
tests/data/validation/: README.md  balun_200x8x3x3_m3_m2_primary.json  balun_200x8x3x3_m3_m2_secondary.json  balun_bicmos_L180_W8_S3_N2_m3_m2_primary.json  balun_bicmos_L180_W8_S3_N2_m3_m2_secondary.json  balun_bicmos_L200_W8_S3_N3_m3_m2_primary.json  balun_bicmos_L200_W8_S3_N3_m3_m2_secondary.json  balun_bicmos_L250_W10_S3_N3_m3_m2_primary.json  balun_bicmos_L250_W10_S3_N3_m3_m2_secondary.json  balun_cmos_L180_W8_S3_N2_m5_m4_primary.json  balun_cmos_L180_W8_S3_N2_m5_m4_secondary.json  balun_cmos_L200_W8_S3_N3_m5_m4_primary.json  balun_cmos_L200_W8_S3_N3_m5_m4_secondary.json  balun_cmos_L250_W10_S3_N3_m5_m4_primary.json  balun_cmos_L250_W10_S3_N3_m5_m4_secondary.json  browse.py  cap_120x60_m3_m2_offset.json  cap_80x80_m3_m2.json  cap_bicmos_L120_W60_m3_m2.json  cap_bicmos_L160_W100_m3_m2.json  cap_bicmos_L200_W120_m3_m2.json  cap_bicmos_L60_W60_m3_m2.json  cap_bicmos_L80_W80_m3_m2.json  cap_cmos_L120_W60_m5_m4.json  cap_cmos_L160_W100_m5_m4.json  cap_cmos_L200_W120_m5_m4.json  cap_cmos_L60_W60_m5_m4.json  cap_cmos_L80_W80_m5_m4.json  mmsq_160x10x2x3_m3_to_m2.json  mmsq_200x12x3x2p5_m3_to_m2_offset.json  mmsq_bicmos_L140_W10_S2_N2_m3_to_m2.json  mmsq_bicmos_L160_W10_S2_N3_m3_to_m2.json  mmsq_bicmos_L200_W12_S3_N2p5_m3_to_m2.json  mmsq_bicmos_L240_W10_S3_N3_m3_to_m2.json  mmsq_cmos_L140_W10_S2_N2_m5_to_m4.json  mmsq_cmos_L160_W10_S2_N3_m5_to_m4.json  mmsq_cmos_L200_W12_S3_N2p5_m5_to_m4.json  mmsq_cmos_L240_W10_S3_N3_m5_to_m4.json  ring_bicmos_R100_W8_G6_m2.json  ring_bicmos_R120_W8_G6_m3.json  (+96 more)
tests/data/validation/analysis/: balun_bicmos_L180_W8_S3_N2_m3_m2_primary.s2p  balun_bicmos_L180_W8_S3_N2_m3_m2_secondary.s2p  balun_bicmos_L200_W8_S3_N3_m3_m2_primary.s2p  balun_bicmos_L200_W8_S3_N3_m3_m2_secondary.s2p  balun_bicmos_L250_W10_S3_N3_m3_m2_primary.s2p  balun_bicmos_L250_W10_S3_N3_m3_m2_secondary.s2p  balun_cmos_L180_W8_S3_N2_m5_m4_primary.s2p  balun_cmos_L180_W8_S3_N2_m5_m4_secondary.s2p  balun_cmos_L200_W8_S3_N3_m5_m4_primary.s2p  balun_cmos_L200_W8_S3_N3_m5_m4_secondary.s2p  balun_cmos_L250_W10_S3_N3_m5_m4_primary.s2p  balun_cmos_L250_W10_S3_N3_m5_m4_secondary.s2p  cap_bicmos_L120_W60_m3_m2.s2p  cap_bicmos_L160_W100_m3_m2.s2p  cap_bicmos_L200_W120_m3_m2.s2p  cap_bicmos_L60_W60_m3_m2.s2p  cap_bicmos_L80_W80_m3_m2.s2p  cap_cmos_L120_W60_m5_m4.s2p  cap_cmos_L160_W100_m5_m4.s2p  cap_cmos_L200_W120_m5_m4.s2p  cap_cmos_L60_W60_m5_m4.s2p  cap_cmos_L80_W80_m5_m4.s2p  mmsq_bicmos_L140_W10_S2_N2_m3_to_m2.s2p  mmsq_bicmos_L160_W10_S2_N3_m3_to_m2.s2p  mmsq_bicmos_L200_W12_S3_N2p5_m3_to_m2.s2p  mmsq_bicmos_L240_W10_S3_N3_m3_to_m2.s2p  mmsq_cmos_L140_W10_S2_N2_m5_to_m4.s2p  mmsq_cmos_L160_W10_S2_N3_m5_to_m4.s2p  mmsq_cmos_L200_W12_S3_N2p5_m5_to_m4.s2p  mmsq_cmos_L240_W10_S3_N3_m5_to_m4.s2p  ring_bicmos_R100_W8_G6_m2.s2p  ring_bicmos_R120_W8_G6_m3.s2p  ring_bicmos_R60_W8_G4_m3.s2p  ring_bicmos_R80_W10_G4_m3.s2p  ring_cmos_R100_W8_G6_m3.s2p  ring_cmos_R120_W8_G6_m5.s2p  ring_cmos_R60_W8_G4_m5.s2p  ring_cmos_R80_W10_G4_m5.s2p  sp_bicmos_R100_sides16_W8_S3_N2_m3.s2p  sp_bicmos_R100_sides8_W8_S3_N3_m3.s2p  (+68 more)
tests/data/validation/layouts/: balun_bicmos_L180_W8_S3_N2_m3_m2_primary.cif  balun_cmos_L180_W8_S3_N2_m5_m4_primary.cif  (+214 more)
tests/gui/: test_app_smoke.py  test_colors.py  test_viewport.py
